--- a/src/global.css
+++ b/src/global.css
@@ -1,15 +1,14 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap');
 
+* {
+    box-sizing: border-box;
+  }
+
 html {
-  box-sizing: border-box;
   font-size: 16px;
 }
 
-*, *:before, *:after {
-  box-sizing: inherit;
-}
-
-body, p, ol, ul {
+body {
   margin: 0;
   padding: 0;
   font-weight: normal;
@@ -18,7 +17,7 @@ body, p, ol, ul {
   -webkit-font-smoothing: antialiased;
 }
 
-input, button, text-area {
+input, button, textarea {
   font: 400 18px Roboto, sans-serif;
 }
 
@@ -42,6 +41,17 @@ form input {
   border: 1px solid #dcdce6;
   border-radius: 8px;
   padding: 0 24px;
+}
+
+form textarea {
+  width: 100%;
+  resize: vertical;
+  min-height: 140px;
+  color: rgb(131, 129, 129);
+  border: 1px solid #dcdce6;
+  border-radius: 8px;
+  padding: 16px 24px;
+  line-height: 24px;
 }
 
 .button {
